{
    "name": "ShipInput",
    "maps": [
        {
            "name": "Ship",
            "id": "057b7762-5199-4552-a4c1-0bc83990bfbc",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "a5734cbb-66d0-4b66-8a79-5fbc7f23696d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstSlotShoot",
                    "type": "Button",
                    "id": "db44999b-b1f5-43e2-8e24-479fee798b4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondSlotShoot",
                    "type": "Button",
                    "id": "424ade2a-7918-4c84-8745-ab275bd4a60c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "14f05330-31ac-4537-8288-d39dc249aeeb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8fcf2221-66b5-47df-8b9d-f17d8a252368",
                    "path": "<Keyboard>/w",
                    "interactions": "Hold(duration=0.001,pressPoint=0.001)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa03d3d8-7663-4d47-8972-43fdb4f324ac",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstSlotShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1d9e4db-49df-4050-8c52-775be950a253",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondSlotShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Direction",
                    "id": "ca7ac779-c41f-42ad-aeda-565f48879850",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "02f47a46-655b-45f2-9d92-f28adde1e988",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "64ecaf39-7d68-4106-80b7-0df12a9cda4c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}